--- a/app/views/customer/products/index.html.erb
+++ b/app/views/customer/products/index.html.erb
@@ -1,42 +1,42 @@
-<div class="row">
-  <div class="col-sm-12">
-    <ul class="list-inline">
-      <li>
-        <%= link_to 'Post Product', new_customer_product_path, class: 'btn btn-primary' %>
-      </li>
-    </ul>
+<div class="customer-main-con">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1 class="page-title">Product</h1>
+      <%= link_to 'Post Product', new_customer_product_path, class: 'btn btn-primary add-btn pull-right' %>
+      <div class="clearfix"></div>
+    </div>
   </div>
-</div>
 
-<div class="row">
-  <div class="col-sm-12">
-    <table class="table table-striped">
-      <thead>
-      <tr class="info">
-        <th>Name</th>
-        <th>Start at</th>
-        <th>End at</th>
-        <th>Action</th>
-      </tr>
-      </thead>
-      <tbody>
-      <% @products.each do |product| %>
-          <tr>
-            <td><%= product.name %></td>
-            <td><%= product.start_at.strftime(time_format) %></td>
-            <td><%= product.end_at.strftime(time_format) %></td>
-            <td>
+  <div class="row">
+    <div class="col-sm-12">
+      <table class="table table-striped">
+        <thead>
+        <tr class="info">
+          <th>Name</th>
+          <th>Start at</th>
+          <th>End at</th>
+          <th>Action</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @products.each do |product| %>
+            <tr class="data">
+              <td><%= product.name %></td>
+              <td><%= product.start_at.strftime(time_format) %></td>
+              <td><%= product.end_at.strftime(time_format) %></td>
+              <td>
 
-              <%= link_to customer_product_path(product) do %>
-                  <i class="fa fa-eye"></i>
-              <% end %>
-              <%= link_to edit_customer_product_path(product) do %>
-                  <i class="fa fa-edit"></i>
-              <% end %>
-            </td>
-          </tr>
-      <%- end %>
-      </tbody>
-    </table>
+                <%= link_to customer_product_path(product) do %>
+                    <i class="fa fa-eye"></i>
+                <% end %>
+                <%= link_to edit_customer_product_path(product) do %>
+                    <i class="fa fa-edit"></i>
+                <% end %>
+              </td>
+            </tr>
+        <%- end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
