--- a/app/views/customer/products/show.html.erb
+++ b/app/views/customer/products/show.html.erb
@@ -1,45 +1,49 @@
-<div class="row">
-  <div class="col-sm-6">
-    <div class="col-sm-12"><strong>Name: </strong><%= @product.name %></div>
-    <div class="col-sm-12"><strong>Category: </strong><%= @product.subcategory.category.name %></div>
-    <div class="col-sm-12"><strong>Subcategory: </strong><%= @product.subcategory.name %></div>
-    <% if @product.name == 'Wedding Collection' %>
-        <div class="col-sm-12"><strong>Gender: </strong><%= @product.gender %></div>
-    <% end %>
-    <div class="col-sm-12"><strong>Description: </strong><%= @product.description %></div>
-    <div class="col-sm-12"><strong>Technical Specification: </strong><%= @product.technical_specification %></div>
-    <div class="col-sm-12"><strong>State: </strong><%= @product.state.name %></div>
-    <div class="col-sm-12"><strong>City: </strong><%= @product.city.name %></div>
-    <div class="col-sm-12"><strong>Location: </strong><%= @product.location %></div>
-    <div class="col-sm-12"><strong>Start at: </strong><%= @product.start_at.strftime(time_format) %></div>
-    <div class="col-sm-12"><strong>End at: </strong><%= @product.end_at.strftime(time_format) %></div>
-    <div class="col-sm-12"><strong>Quantity: </strong><%= @product.quantity %></div>
-    <div class="col-sm-12"><strong>Rent: </strong><%= @product.rent %></div>
-    <div class="col-sm-12"><strong>Price in rupees: </strong><%= @product.price_in_rupees %></div>
-    <div class="col-sm-12"><strong>Refundable security: </strong><%= @product.refundable_security %></div>
-    <div class="col-sm-12"><strong>Cost of replacement: </strong><%= @product.cost_of_replacement %></div>
-    <div class="col-sm-12"><strong>Youtube link: </strong><%= @product.youtube_link %></div>
-    <div class="col-sm-12"><strong>Others: </strong><%= @product.other %></div>
-  </div>
-  <div class="col-sm-6">
-    <div class="row">
-      <% @product.product_images.each do |product_image| %>
-          <div class="col-sm-12">
-            <%= image_tag product_image.image.url(ProductImage::DEFAULT_SIZE) %>
-            <% if product_image.id.present? %>
-                <%= link_to customer_product_product_image_path(@product, product_image), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
-                    <i class="fa fa-trash fa-3"></i>
+<div class="customer-main-show">
+  <div class="row">
+    <div class="white-bg">
+      <div class="col-sm-6">
+        <div class="col-sm-12"><strong>Name: </strong><%= @product.name %></div>
+        <div class="col-sm-12"><strong>Category: </strong><%= @product.subcategory.category.name %></div>
+        <div class="col-sm-12"><strong>Subcategory: </strong><%= @product.subcategory.name %></div>
+        <% if @product.name == 'Wedding Collection' %>
+            <div class="col-sm-12"><strong>Gender: </strong><%= @product.gender %></div>
+        <% end %>
+        <div class="col-sm-12"><strong>Description: </strong><%= @product.description %></div>
+        <div class="col-sm-12"><strong>Technical Specification: </strong><%= @product.technical_specification %></div>
+        <div class="col-sm-12"><strong>State: </strong><%= @product.state.name %></div>
+        <div class="col-sm-12"><strong>City: </strong><%= @product.city.name %></div>
+        <div class="col-sm-12"><strong>Location: </strong><%= @product.location %></div>
+        <div class="col-sm-12"><strong>Start at: </strong><%= @product.start_at.strftime(time_format) %></div>
+        <div class="col-sm-12"><strong>End at: </strong><%= @product.end_at.strftime(time_format) %></div>
+        <div class="col-sm-12"><strong>Quantity: </strong><%= @product.quantity %></div>
+        <div class="col-sm-12"><strong>Rent: </strong><%= @product.rent %></div>
+        <div class="col-sm-12"><strong>Price in rupees: </strong><%= @product.price_in_rupees %></div>
+        <div class="col-sm-12"><strong>Refundable security: </strong><%= @product.refundable_security %></div>
+        <div class="col-sm-12"><strong>Cost of replacement: </strong><%= @product.cost_of_replacement %></div>
+        <div class="col-sm-12"><strong>Youtube link: </strong><%= @product.youtube_link %></div>
+        <div class="col-sm-12"><strong>Others: </strong><%= @product.other %></div>
+      </div>
+      <div class="col-sm-6">
+        <div class="row">
+          <% @product.product_images.each do |product_image| %>
+              <div class="col-sm-12">
+                <%= image_tag product_image.image.url(ProductImage::DEFAULT_SIZE) %>
+                <% if product_image.id.present? %>
+                    <%= link_to customer_product_product_image_path(@product, product_image), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
+                        <i class="fa fa-trash fa-3"></i>
+                    <%- end %>
                 <%- end %>
-            <%- end %>
-          </div>
-      <%- end %>
+              </div>
+          <%- end %>
+        </div>
+        <% unless @product.product_images.count > 2 %>
+            <fieldset>
+              <legend><small>Add new images</small></legend>
+              <%= render partial: 'customer/product_images/form', locals: { product: @product, product_image: @product.product_images.new } %>
+            </fieldset>
+        <% end %>
+      </div>
+      <div class="clearfix"></div>
     </div>
-    <% unless @product.product_images.count > 2 %>
-        <fieldset>
-          <legend><small>Add new images</small></legend>
-          <%= render partial: 'customer/product_images/form', locals: { product: @product, product_image: @product.product_images.new } %>
-        </fieldset>
-    <% end %>
   </div>
-
 </div>
