--- a/app/views/customer/services/index.html.erb
+++ b/app/views/customer/services/index.html.erb
@@ -1,43 +1,43 @@
-<div class="row">
-  <div class="col-sm-12">
-    <ul class="list-inline">
-      <li>
-        <%= link_to 'Post Service', new_customer_service_path, class: 'btn btn-primary' %>
-      </li>
-    </ul>
+<div class="customer-main-con">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1 class="page-title">Services</h1>
+      <%= link_to 'Post Service', new_customer_service_path, class: 'btn btn-primary add-btn pull-right' %>
+      <div class="clearfix"></div>
+    </div>
   </div>
-</div>
 
-<div class="row">
-  <div class="col-sm-12">
-    <table class="table table-striped">
-      <thead>
-      <tr class="info">
-        <th>Category</th>
-        <th>Subcategory</th>
-        <th>Start at</th>
-        <th>End at</th>
-        <th>Action</th>
-      </tr>
-      </thead>
-      <tbody>
-      <% @services.each do |service| %>
-          <tr>
-            <td><%= service.subcategory.category.name %></td>
-            <td><%= service.subcategory.name %></td>
-            <td><%= service.start_at.strftime(time_format) %></td>
-            <td><%= service.end_at.strftime(time_format) %></td>
-            <td>
-              <%= link_to customer_service_path(service) do %>
-                  <i class="fa fa-eye"></i>
-              <% end %>
-              <%= link_to edit_customer_service_path(service) do %>
-                  <i class="fa fa-edit"></i>
-              <% end %>
-            </td>
-          </tr>
-      <%- end %>
-      </tbody>
-    </table>
+  <div class="row">
+    <div class="col-sm-12">
+      <table class="table table-striped">
+        <thead>
+        <tr class="info">
+          <th>Category</th>
+          <th>Subcategory</th>
+          <th>Start at</th>
+          <th>End at</th>
+          <th>Action</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @services.each do |service| %>
+            <tr class="data">
+              <td><%= service.subcategory.category.name %></td>
+              <td><%= service.subcategory.name %></td>
+              <td><%= service.start_at.strftime(time_format) %></td>
+              <td><%= service.end_at.strftime(time_format) %></td>
+              <td>
+                <%= link_to customer_service_path(service) do %>
+                    <i class="fa fa-eye"></i>
+                <% end %>
+                <%= link_to edit_customer_service_path(service) do %>
+                    <i class="fa fa-edit"></i>
+                <% end %>
+              </td>
+            </tr>
+        <%- end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
