--- a/app/views/customer/welcome/index.html.erb
+++ b/app/views/customer/welcome/index.html.erb
@@ -21,6 +21,9 @@
         <li>
           <%= link_to 'Register Here', customer_registration_path, class: 'popup-text' %>
         </li>
+        <li>
+          <%= link_to 'Forget Password', class: 'popup-text' %>
+        </li>
       </ul>
     </div>
   </div>
