--- a/app/views/customer/products/show.html.erb
+++ b/app/views/customer/products/show.html.erb
@@ -1,47 +1,141 @@
 <div class="customer-main-show">
   <div class="row">
     <div class="white-bg">
-      <div class="col-sm-6">
-        <div class="col-sm-12"><strong>Name: </strong><%= @product.name %></div>
-        <div class="col-sm-12"><strong>Category: </strong><%= @product.subcategory.category.name %></div>
-        <div class="col-sm-12"><strong>Subcategory: </strong><%= @product.subcategory.name %></div>
-        <% if @product.name == 'Wedding Collection' %>
-            <div class="col-sm-12"><strong>Gender: </strong><%= @product.gender %></div>
-        <% end %>
-        <div class="col-sm-12"><strong>Description: </strong><%= @product.description %></div>
-        <div class="col-sm-12"><strong>Technical Specification: </strong><%= @product.technical_specification %></div>
-        <div class="col-sm-12"><strong>State: </strong><%= @product.state.name %></div>
-        <div class="col-sm-12"><strong>City: </strong><%= @product.city.name %></div>
-        <div class="col-sm-12"><strong>Location: </strong><%= @product.location %></div>
-        <div class="col-sm-12"><strong>Start at: </strong><%= @product.start_at.strftime(time_format) %></div>
-        <div class="col-sm-12"><strong>End at: </strong><%= @product.end_at.strftime(time_format) %></div>
-        <div class="col-sm-12"><strong>Quantity: </strong><%= @product.quantity %></div>
-        <div class="col-sm-12"><strong>Rent: </strong><%= @product.rent %></div>
-        <div class="col-sm-12"><strong>Price in rupees: </strong><%= @product.price_in_rupees %></div>
-        <div class="col-sm-12"><strong>Refundable security: </strong><%= @product.refundable_security %></div>
-        <div class="col-sm-12"><strong>Cost of replacement: </strong><%= @product.cost_of_replacement %></div>
-        <div class="col-sm-12"><strong>Youtube link: </strong><%= @product.youtube_link %></div>
-        <div class="col-sm-12"><strong>Others: </strong><%= @product.other %></div>
-      </div>
-      <div class="col-sm-6">
-        <div class="row">
-          <% @product.product_images.each do |product_image| %>
-              <div class="col-sm-12">
-                <%= image_tag product_image.image.url(ProductImage::DEFAULT_SIZE) %>
-                <% if product_image.id.present? %>
-                    <%= link_to customer_product_product_image_path(@product, product_image), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
-                        <i class="fa fa-trash fa-3"></i>
-                    <%- end %>
-                <%- end %>
-              </div>
-          <%- end %>
+      <div class="col-sm-6 col-xs-12">
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Name:</h4>
+            <p><%= @product.name %></p>
+          </div>
         </div>
-        <% unless @product.product_images.count > 2 %>
-            <fieldset>
-              <legend><small>Add new images</small></legend>
-              <%= render partial: 'customer/product_images/form', locals: { product: @product, product_image: @product.product_images.new } %>
-            </fieldset>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Category:</h4>
+            <p><%= @product.subcategory.category.name %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Subcategory:</h4>
+            <p><%= @product.subcategory.name %></p>
+          </div>
+        </div>
+        <% if @product.name == 'Wedding Collection' %>
+            <div class="col-xs-12">
+              <div class="product-detail">
+                <h4>Gender:</h4>
+                <p><%= @product.gender %></p>
+              </div>
+            </div>
         <% end %>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Description:</h4>
+            <p><%= @product.description %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Technical Specification:</h4>
+            <p><%= @product.technical_specification %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>State:</h4>
+            <p><%= @product.state.name %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>City:</h4>
+            <p><%= @product.city.name %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Location:</h4>
+            <p><%= @product.location %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Start at:</h4>
+            <p><%= @product.start_at.strftime(time_format) %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>End at:</h4>
+            <p><%= @product.end_at.strftime(time_format) %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Quantity:</h4>
+            <p><%= @product.quantity %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Rent:</h4>
+            <p><%= @product.rent %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Price in rupees:</h4>
+            <p><%= @product.price_in_rupees %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Refundable security:</h4>
+            <p><%= @product.refundable_security %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Cost of replacement:</h4>
+            <p><%= @product.cost_of_replacement %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Youtube link:</h4>
+            <p><%= @product.youtube_link %></p>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="product-detail">
+            <h4>Others:</h4>
+            <p><%= @product.other %></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-xs-12">
+        <div class="add-image-con">
+          <div class="row">
+            <div class="col-xs-12">
+              <% @product.product_images.each do |product_image| %>
+                <span class="img-con">
+                  <%= image_tag product_image.image.url(ProductImage::DEFAULT_SIZE), class: 'upload-img' %>
+                    <% if product_image.id.present? %>
+                      <%= link_to customer_product_product_image_path(@product, product_image), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
+                          <i class="fa fa-times cross-icon"></i>
+                      <%- end %>
+                  <%- end %>
+                </span>
+              <%- end %>
+            </div>
+          </div>
+          <% unless @product.product_images.count > 2 %>
+              <fieldset>
+                <legend class="add-new-text"><small>Add new images</small></legend>
+                <%= render partial: 'customer/product_images/form', locals: { product: @product, product_image: @product.product_images.new } %>
+              </fieldset>
+          <% end %>
+        </div>
       </div>
       <div class="clearfix"></div>
     </div>
