--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -44,35 +44,28 @@
     </ul>
   </div>
   <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-account-dialog">
-    <h3 class="widget-title">Create TheBox Account</h3>
-    <p>Ready to get best offers? Let's get started!</p>
+    <h3 class="widget-title">Register</h3>
+    <p>Welcome, Register to get Enter</p>
     <hr />
-    <form>
+    <%= simple_form_for :customer, :url => customer_sign_up_path do |f| %>
       <div class="form-group">
-        <label>Email</label>
-        <input class="form-control" type="text" />
-      </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input class="form-control" type="text" />
+        <%= f.input :name, class: 'form-control' %>
       </div>
       <div class="form-group">
-        <label>Repeat Password</label>
-        <input class="form-control" type="text" />
+        <%= f.input :email, class: 'form-control' %>
       </div>
       <div class="form-group">
-        <label>Phone Number</label>
-        <input class="form-control" type="text" />
+        <%= f.input :password, class: 'form-control' %>
       </div>
-      <div class="checkbox">
-        <label>
-          <input class="i-check" type="checkbox" />Subscribe to the Newsletter</label>
+      <div class="form-group">
+        <%= f.input :password_confirmation, class: 'form-control' %>
       </div>
-      <input class="btn btn-primary" type="submit" value="Create Account" />
-    </form>
+        <%= submit_tag 'Sign Up', class: 'btn btn-primary' %>
+    <%- end %>
     <div class="gap gap-small"></div>
     <ul class="list-inline">
-      <li><a href="#nav-login-dialog" class="popup-text">Already Memeber</a>
+      <li>
+        <a href="#nav-login-dialog" class="popup-text">Login</a>
       </li>
     </ul>
   </div>
