create help, privacy policy & terms and condtion page

--- a/app/views/welcome/shared/_footer.html.erb
+++ b/app/views/welcome/shared/_footer.html.erb
@@ -35,7 +35,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <p class="copyright-text">Copyright &copy; <a href="/index">ByeBuying</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved</p>
+        <p class="copyright-text">Copyright &copy; <a href="/">ByeBuying</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved
+          <a href="/terms_condition">terms & Condition</a>  | <a href="/privacy_policy">Privacy Policy</a></p>
       </div>
       <!--<div class="col-md-6">-->
         <!--<ul class="payment-icons-list">-->
