--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -14,7 +14,7 @@
             </li>
             <li><a href="#">Wishlist</a>
             </li>
-            <li><a href="#">Help</a>
+            <li><a href="/help">Help</a>
             </li>
           </ul>
         </div>
