--- a/app/views/customer/advertisements/_form.html.erb
+++ b/app/views/customer/advertisements/_form.html.erb
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :per_hour_cost, label: 'End at' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :per_hour_cost, label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
