--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -69,7 +69,7 @@
                     <div class="product-img-wrap">
                       <%= image_tag 'theme_img/500x500.png', class: 'product-img', alt: '' %>
                     </div>
-                    <a class="product-link" href="#"></a>
+                    <a class="product-link" href="<%= service_path(service)%>"></a>
                     <div class="product-caption">
                       <ul class="product-caption-rating">
                         <li class="rated"><i class="fa fa-star"></i>
