--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -1,10 +1,26 @@
-<%= simple_form_for [:product, @enquiry] do |f| %>
-    <%= f.input :start_at, label: 'Start Time of Product', default: @product.start_at  %>
-    <%= f.input :end_at, label: 'End Time of Product', default: @product.end_at %>
+<% unless @service.present? %>
+    <%= simple_form_for [:product, @enquiry] do |f| %>
+        <%= f.input :start_at, label: 'Start Time of Product', default: @product.start_at  %>
+        <%= f.input :end_at, label: 'End Time of Product', default: @product.end_at %>
 
-    Rent: <%= @product.rent %> <br>
-    Price in rupees: <%= @product.price_in_rupees %>
+        Rent: <%= @product.rent %> <br>
+        Price in rupees: <%= @product.price_in_rupees %>
 
-    <%= f.input :expected_price %>
-    <%= f.submit 'Save', class: 'btn btn-default' %>
+        <%= f.input :expected_price %>
+        <%= f.submit 'Save', class: 'btn btn-default' %>
+    <% end %>
+
+<% else %>
+
+    <%= simple_form_for [:service, @enquiry] do |f| %>
+        <%= f.input :start_at, label: 'Start Time of Product', default: @service.start_at  %>
+        <%= f.input :end_at, label: 'End Time of Product', default: @service.end_at %>
+
+        Rent: <%#= @service.rent %> <br>
+        Price in rupees: <%= @service.price_in_rupees %>
+
+        <%= f.input :expected_price %>
+        <%= f.submit 'Save', class: 'btn btn-default' %>
+    <% end %>
 <% end %>
+
