--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -84,7 +84,7 @@
                         </li>
                       </ul>
                       <h5 class="product-caption-title">
-                        <%= service.name %>
+                        <%= service.service_description %>
                       </h5>
                       <div class="product-caption-price">
                         <span class="product-caption-price-new">
