--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,7 +15,7 @@
     <div class="col-md-5">
       <div class="product-page-product-wrap jqzoom-stage">
         <div class="clearfix">
-          <a href="theme_img/500x500.png" id="jqzoom" data-rel="gal-1">
+          <a href="../../../assets/theme_img/500x500.png" id="jqzoom" data-rel="gal-1">
             <%= image_tag 'theme_img/500x500.png', class: 'img-responsive' %>
           </a>
         </div>
