--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -10,10 +10,10 @@
             </li>
             <li><a href="/contact_us">Contact Us</a>
             </li>
-            <li><a href="#">FAQ</a>
+            <li><a href="/faq">FAQ</a>
             </li>
-            <li><a href="#">Wishlist</a>
-            </li>
+            <!--<li><a href="#">Wishlist</a>-->
+            <!--</li>-->
             <li><a href="/help">Help</a>
             </li>
           </ul>
