--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,15 +1,5 @@
 <div class="row">
   <div class="col-sm-12">
-    <ul class="list-inline">
-      <li>
-        <%= link_to 'Post Product', new_admin_product_path, class: 'btn btn-primary' %>
-      </li>
-    </ul>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-12">
     <table class="table table-striped">
       <thead>
       <tr class="info">
@@ -23,12 +13,19 @@
       <% @products.each do |product| %>
           <tr>
             <td><%= product.name %></td>
-            <td><%= product.start_at.strftime(time_format) %></td>
-            <td><%= product.start_at.strftime(time_format) %></td>
+            <td><%= product.subcategory.category.name %></td>
+            <td><%= product.subcategory.name %></td>
             <td>
-              <%= link_to edit_admin_product_path(product) do %>
-                  <i class="fa fa-edit"></i>
+              <%= link_to admin_product_path(product) do %>
+                  <i class="fa fa-eye"></i>
               <% end %>
+              <%# if product.admin_verified? %>
+                  <!--<span class="text-success">Verified by admin</span>-->
+                  <%#= link_to( 'Un-verify' , admin_approve_admin_product_path(product, admin_verified: false), method: :put, class: 'btn btn-danger btn-xs') %>
+              <%#- else %>
+                  <!--<span class="text-danger">Not verified</span>-->
+                  <%#= link_to( 'Verify' , admin_approve_admin_product_path(product, admin_verified: true), method: :put, class: 'btn btn-success btn-xs') %>
+              <%#- end %>
             </td>
           </tr>
       <%- end %>
