--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,11 +21,17 @@
         <div class="col-md-8">
           <div class="box">
             <ul class="product-page-product-rating">
-              <li class="rated"><i class="fa fa-star"></i></li>
-              <li class="rated"><i class="fa fa-star"></i></li>
-              <li class="rated"><i class="fa fa-star"></i></li>
-              <li class="rated"><i class="fa fa-star"></i></li>
-              <li class="rated"><i class="fa fa-star"></i></li>
+              <% for i in 1..5 %>
+                  <% if i <= @product.rating %>
+                      <li class="rated"><i class="fa fa-star"></i></li>
+                  <% else %>
+                      <li class=""><i class="fa fa-star"></i></li>
+                  <% end %>
+              <% end %>
+              <!--<li class="rated"><i class="fa fa-star"></i></li>-->
+              <!--<li class="rated"><i class="fa fa-star"></i></li>-->
+              <!--<li class="rated"><i class="fa fa-star"></i></li>-->
+              <!--<li class="rated"><i class="fa fa-star"></i></li>-->
             </ul>
             <!--<p class="product-page-product-rating-sign"><a href="#">238 customer reviews</a></p>-->
             <p class="product-page-desc"><%= @product.description %></p>
