--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -4,20 +4,21 @@
     <ol class="breadcrumb page-breadcrumb">
       <li><a href="#"><%= @service.subcategory.category.name %></a></li>
       <li><a href="#"><%= @service.subcategory.name %></a></li>
-      <!--<li><a href="#">Cell Phones</a>-->
-      <!--</li>-->
-      <!--<li><a href="#">Sony</a>-->
-      <!--</li>-->
-      <!--<li class="active">XPERIA Z Ultra 16GB</li>-->
     </ol>
   </header>
   <div class="row">
     <div class="col-md-5">
       <div class="product-page-product-wrap jqzoom-stage">
         <div class="clearfix">
-          <a href="../../../assets/theme_img/500x500.png" id="jqzoom" data-rel="gal-1">
-            <%= image_tag 'theme_img/500x500.png', class: 'img-responsive' %>
-          </a>
+          <% if @service.service_images.any? %>
+              <a href="<%= @service.service_images.first.image(:size_500x500) %>" id="jqzoom" data-rel="gal-1">
+                <%= image_tag @service.service_images.first.image(:size_500x500), class: 'img-responsive' %>
+              </a>
+          <% else %>
+              <a href="../../../assets/theme_img/500x500.png" id="jqzoom" data-rel="gal-1">
+                <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+              </a>
+          <%end%>
         </div>
       </div>
     </div>
